# Ocaml-BattleShip

./: .gitignore  Battleship-AI.opam  Design.md  Ocaml-Battleship.opam  README.md  dune-project
_coverage/: index.html
_coverage/src/lib/: battleship_gameplay.ml.html  battleship_helper.ml.html  battleship_placement.ml.html  battleship_types.ml.html
demo/Project_Checkpoint/: Checkpoint.md
demo/Project_Design_Proposal/Library_Dream/: dune
progress/Project_Design_Proposal/: Design.md
progress/Project_Design_Proposal/Library_Dream/: dream_demo.ml
results/: ai_analysis.ipynb  easy_counts.txt  easy_counts_test.txt  hard_counts.txt  hard_counts_test.txt  medium_counts.txt  medium_counts_test.txt
src/: board.mli  types.mli  utils.mli
src/lib/: battleship_ai.ml  battleship_ai.mli  battleship_gameplay.ml  battleship_gameplay.mli  battleship_helper.ml  battleship_helper.mli  battleship_placement.ml  battleship_placement.mli  battleship_types.ml  battleship_types.mli  dune  ship.mli  types.ml  web_ui.ml  web_ui.mli
test/: dune  test_battleship_gameplay.ml  test_battleship_helper.ml  test_battleship_placement.ml  test_battleship_types.ml
web/: game.html  index.html
